CHANGES
=======

* enable validations in nova-lvm
* Enforce quota usage from placement when unshelving
* Reproducer for bug 2003991 unshelving offloaded instance
* Unbind port when offloading a shelved instance
* Fix failed count for anti-affinity check

27.1.0
------

* CI: fix backport validator for new branch naming
* Bump nova-ceph-multstore timeout
* Revert "Debug Nova APIs call failures"
* Have host look for CPU controller of cgroupsv2 location
* Enable use of service user token with admin context
* Use force=True for os-brick disconnect during delete
* Handle zero pinned CPU in a cell with mixed policy
* Reproduce asym NUMA mixed CPU policy bug
* Save cell socket correctly when updating host NUMA topology
* Reproduce bug 1995153
* Fix get\_segments\_id with subnets without segment\_id
* [stable-only] Update TOX\_CONSTRAINTS\_FILE for stable/2023.1
* [stable-only] Update .gitreview for stable/2023.1

27.0.0
------

* Add service version for Antelope
* Add the 2023.1 Antelope prelude section
* Doc: update live-migration cmd
* Add docs for cpu management
* Use mysql memory reduction flags for ceph job
* doc: mark the max microversion for 2023.1 Antelope
* Revert "Add logging to find test cases leaking libvirt threads"
* Fix logging in MemEncryption-related checks
* Enable cpus when an instance is spawning
* libvirt: let CPUs be power managed
* Add logging to find test cases leaking libvirt threads
* cpu: interfaces for managing state and governor
* Add docs for stable-compute-uuid behaviors
* Fix 6.2 compute RPC version alias
* fup: support evacuate target state
* Stable compute uuid functional tests
* Abort startup if nodename conflict is detected
* Move comment about \_destroy\_evacuated\_instances()
* Protect against a deleted node id file
* Check our nodes for hypervisor\_hostname changes
* api: extend evacuate instance to support target state
* compute: enhance compute evacuate instance to support target state
* Detect host renames and abort startup