@@ -1,6 +1,6 @@
 Metadata-Version: 2.1
 Name: nova
-Version: 27.1.1.dev10
+Version: 27.1.1.dev12
 Summary: Cloud computing fabric controller
 Home-page: https://docs.openstack.org/nova/latest/
 Author: OpenStack
